--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ body {
   width: 0.7em;
   height: 100%;
   perspective: 500px;
-  font-family: 'JetBrains Mono', monospace;
+  font-family: 'Source Code Pro', monospace;
   font-weight: 900;
   text-transform: uppercase;
 }
@@ -261,7 +261,7 @@ body {
   background: #cccccc !important;
 }
 [data-board-bg="white"] .flap-content {
-  color: #1a1a1a !important;
+  /* Color is set dynamically by JavaScript - don't override */
   text-shadow: 0 1px 1px rgba(255,255,255,0.5) !important;
 }
 
